--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div id="covidNotice" style="text-align: center;">
-        In response to the COVID-19 situation, we have our worship services virtually via a Zoom meeting. <a href="#">Learn More</a>
+        <b>In response to the COVID-19 situation, we have our worship services virtually via a Zoom meeting. <a href="#">Learn More</a></b>
     </div>
     <nav style="margin-top:24px;"class="navbar navbar-expand-lg navbar-light bg-light customNav">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">LOGO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,9 +69,7 @@
       </nav>
 
       <!-- LANDING PAGE CAROUSEL -->
-      <div class="spacer" style="height: 80px;"></div>
-      <div class="jumbotron">
-        <div class="bd-example">
+      <div class="spacer" style="height: 24px;"></div>
           <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -110,11 +108,10 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-        </div>
         <div style="text-align: center; color:white; background-color: #66A73A;"><p><b>SUNDAY | 11:00AM</b> <a href="#">View Details</a></p></div>
-      </div>
 
       <div id="landingInfo">
+        <div class="spacer" style="height: 40px;"></div>
         <p>Located in West Los Angeles, we want to share "Life in Christ, Life Together" with you, your family, and with our
           community.</p>
         <br>
@@ -128,6 +125,7 @@
       </div>
 
       <!-- MEET OUT PASTOR -->
+      <div class="spacer" style="height: 40px;"></div>
       <div class="media">
         <img src="images/pastorAbel.jpeg" class="mr-3" alt="...">
         <div class="media-body">
@@ -139,6 +137,7 @@
       </div>
 
       <!-- SUNDAY WORSHIP SERVICE -->
+      <div class="spacer" style="height: 40px;"></div>
       <div id="swsInfo">
         <h2>Sunday Worship Service</h2>
         <p>Our worship service starts at 11 am with a time of welcome and announcements followed by an opening prayer and praise. Then one of our pastors shares a message from the Bible. At the end of the service, anyone who wants to can come forward in response to the message to be prayed for by the pastors or staff. Sometimes we also have testimonies, scripture recitation, and skits. Our worship services are about 75-90 minutes. Please join us for lunch afterwards--we'd love to get to know you!</p>
@@ -149,6 +148,7 @@
       </div>
 
       <!-- GROUPS -->
+      <div class="spacer" style="height: 40px;"></div>
       <div id="landingPageGroups">
         <div class="group1">Missional Communities</div>
         <div class="group2">Sermons</div>
@@ -157,7 +157,7 @@
       </div>
 
       <!-- CONTACT FORM -->
-      <h2>Sunday Worship Service</h2>
+      <h2>Got Question? Let us know!></h2>
       <form>
         <div class="form-group">
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
@@ -171,9 +171,32 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
-      <footer>
-        <img src="" alt="Logo">
-        
+      <footer style="background-color: grey;">
+        <div class="logoFooter">
+          <img src="images/experimentalLogo.png" alt="Logo" height="292px" weight="329px">
+        </div>
+        <ul class="aboutFooter">
+          <b>ABOUT</b>
+          <li>Our Church</li>
+          <li>Our Pastor</li>
+          <li>Statement of Faith</li>
+          <li>Core Values</li>
+        </ul>
+        <ul class="ministriesFooter">
+          <b>MINISTRIES</b>
+          <li>Missional Communities</li>
+          <li>Youth</li>
+          <li>Children's Ministry</li>
+        </ul>
+        <ul class="resourcesFooter">
+          <b>RESOURCES</b>
+          <li>Previous Sermons</li>
+          <li>Equip</li>
+          <li>Devotion Time</li>
+          <li>Bible in a Year</li>
+          <li>Previous Sermons</li>
+        </ul>
+
       </footer>
 
 
