--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFE Church</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&family=Raleway:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,7 +28,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#">Our Church</a>
                 <a class="dropdown-item" href="#">Our Pastor</a>
-                <a class="dropdown-item" href="#">Statement of Faith</a>
+                <a class="dropdown-item" href="statementOfFaith.html">Statement of Faith</a>
                 <a class="dropdown-item" href="#">Core Values</a>
               </div>
             </li>
@@ -37,7 +39,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="#">Missional Communities</a>
                   <a class="dropdown-item" href="#">Youth</a>
-                  <a class="dropdown-item" href="#">Children's Ministry</a>
+                  <a class="dropdown-item" href="joyLand.html">Children's Ministry</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -112,6 +114,8 @@
 
       <div id="landingInfo">
         <div class="spacer" style="height: 40px;"></div>
+        <h2>Who We Are</h2>
+        <br>
         <p>Located in West Los Angeles, we want to share "Life in Christ, Life Together" with you, your family, and with our
           community.</p>
         <br>
@@ -155,6 +159,51 @@
         <div class="group3">Youth</div>
         <div class="group4">Children</div>
       </div>
+
+
+      <!-- Cards -->
+     <div class="container-fluid content">
+        <h2 class="sectionHeading">Upcoming Events</h2>
+        <div class="row showsNear">
+          <!-- Card 1 -->
+          <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+            <div class="card">
+              <img src="images/communityOutreach.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Serving in Boyle Heights</h4>
+                <h5>May 24th</h5>
+                <p class="card-text">Serving the community with our sister church in Boyle Heights</p>
+              </div>
+            </div>
+          </div>
+          <!-- End card 1 -->
+  
+          <!-- Card 2 -->
+          <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+            <div class="card">
+              <img src="images/show2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Memorial Day Gathering</h4>
+                <h5>May 31st</h5>
+                <p class="card-text">Join us for an outdoor event</p>
+              </div>
+            </div>
+          </div>
+          <!-- End card 2 -->
+  
+          <!-- Card 3 -->
+          <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+            <div class="card">
+              <img src="images/show3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Membership Class</h4>
+                <h5>June 12th</h5>
+                <p class="card-text">Interested in being a member? Learn more at this one day course.</p>
+              </div>
+            </div>
+          </div>
+          <!-- End card 3 -->
+        </div>
 
       <!-- CONTACT FORM -->
       <h2>Got Question? Let us know!></h2>
@@ -204,6 +253,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
