--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div style="text-align: center; color:white; background-color: #66A73A;">
+  <div style="text-align: center; color:white; background-color: #66A73A; height:40px;">
     <p><b>SUNDAY | 11:00AM  </b> <a id="viewDetails" style="color: white;" href="#"><u>View Details</u></a></p>
   </div>
 
