--- a/joyLand.html
+++ b/joyLand.html
@@ -138,7 +138,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
-              <img style="width: 100%; height: 100%;" src="#" alt="">
+              <img style="width: 100%; height: 100%;" src="images/mina.png" alt="">
             </div>
             <div class="col-lg-8 col-md-6 col-sm-12">
               <h5 class="mt-0">Mina Chu</h5>
